# lab04

./: .travis.yml  README.md  appveyor.yml
formatter_ex/: CMakeLists.txt  formatter_ex.cpp  formatter_ex.h
formatter_lib/: CMakeLists.txt
formatter_lib/include/: formatter.h
formatter_lib/sources/: formatter.cpp
hello_world/: CMakeLists.txt
hello_world/src/: main.cpp
solver/: CMakeLists.txt
solver/src/: main.cpp
